--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
@@ -5,7 +5,7 @@
 @inject ITCatCodTradeInfoAppService TCatCodTradeInfoAppService
 
 <Modal @bind-Visible="@Visible">
-    <ModalContent Size="_recordsVisible? ModalSize.ExtraLarge: ModalSize.Large">
+    <ModalContent Size="ModalSize.ExtraLarge">
         <ModalHeader>
             <ModalTitle>
                 <h3>@L[_recordsVisible ? "Import" : "TCatFileUpload"]</h3>
