--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/PaymentProviderSelectionStep.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/PaymentProviderSelectionStep.razor
@@ -1,40 +1,105 @@
 ﻿@using Kooco.Pikachu.TenantPaymentFees
+@using Kooco.Pikachu.TenantPayouts
+@using Kooco.Pikachu.Extensions
+
 @inherits PikachuComponentBase
 
-<div class="list-card" @onclick="@(() => SelectFeeType(PaymentFeeType.EcPay))">
-    <div class="list-card-left">
-        <div class="list-card-icon provider">
-            EC
-        </div>
-        <div class="list-card-info">
-            <div class="d-flex align-items-start justify-content-start gap-2">
-                <h3>ECPay</h3>
-                <PikachuBadge Class="pk-badge-success pk-badge-sm">@L["TenantPayout:Active"]</PikachuBadge>
+@if (Loading)
+{
+    <p class="mt-3">
+        <span class="spinner">
+            <span class="spinner-border text-primary" style="height: 1.5rem; width: 1.5rem; border-width: 2px;"></span>
+        </span>
+        <span style="font-size: 1rem;">Loading...</span>
+    </p>
+}
+else
+{
+    @foreach (var feeType in ActiveFeeTypes.OrEmptyIfNull())
+    {
+        var localized = L["Enum:TenantPaymentFee." + (int)feeType];
+
+        <div class="list-card" @onclick="@(() => SelectFeeType(feeType))">
+            <div class="list-card-left">
+                <div class="list-card-icon provider">
+                    @TenantPayoutUiHelper.GetInitials(localized)
+                </div>
+                <div class="list-card-info">
+                    <div class="d-flex align-items-start justify-content-start gap-2">
+                        <h3>@localized</h3>
+                        <PikachuBadge Class="pk-badge-success pk-badge-sm">@L["TenantPayout:Active"]</PikachuBadge>
+                    </div>
+                    <div class="list-card-meta">@L["PrimaryPaymentProcessingProvider"]</div>
+                </div>
             </div>
-            <div class="list-card-meta">@L["PrimaryPaymentProcessingProvider"]</div>
         </div>
-    </div>
-</div>
-<div class="list-card disabled">
-    <div class="list-card-left">
-        <div class="list-card-icon">
-            +
-        </div>
-        <div class="list-card-info">
-            <div class="d-flex align-items-start justify-content-start gap-2">
-                <h3>@L["AdditionalProviders"]</h3>
-                <PikachuBadge Class="pk-badge-sm bg-light">@L["ComingSoon"]</PikachuBadge>
+    }
+
+    @if (ActiveFeeTypes != null && ActiveFeeTypes.Count != 0)
+    {
+        <div class="list-card disabled">
+            <div class="list-card-left">
+                <div class="list-card-icon">
+                    +
+                </div>
+                <div class="list-card-info">
+                    <div class="d-flex align-items-start justify-content-start gap-2">
+                        <h3>@L["AdditionalProviders"]</h3>
+                        <PikachuBadge Class="pk-badge-sm bg-light">@L["ComingSoon"]</PikachuBadge>
+                    </div>
+                    <div class="list-card-meta">@L["MoreProvidersWillBeAvailableSoon"]</div>
+                </div>
             </div>
-            <div class="list-card-meta">@L["MoreProvidersWillBeAvailableSoon"]</div>
         </div>
-    </div>
-</div>
+    }
+    else
+    {
+        <div class="list-card disabled">
+            <div class="list-card-left">
+                <div class="list-card-icon">
+                    <i class="fas fa-cancel"></i>
+                </div>
+                <div class="list-card-info">
+                    <div class="d-flex align-items-start justify-content-start gap-2">
+                        <h3>@L["NoPayoutData"]</h3>
+                    </div>
+                    <div class="list-card-meta">@L["NoPayoutDataDescription"]</div>
+                </div>
+            </div>
+        </div>
+    }
+}
 
 @code {
+    [Parameter] public ITenantPayoutAppService Service { get; set; }
     [Parameter] public Guid? TenantId { get; set; }
     [Parameter] public EventCallback<PaymentFeeType?> FeeTypeChanged { get; set; }
 
     private PaymentFeeType? FeeType { get; set; }
+    private List<PaymentFeeType> ActiveFeeTypes { get; set; }
+    private bool Loading { get; set; } = true;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+            await GetData();
+    }
+
+    async Task GetData()
+    {
+        try
+        {
+            ActiveFeeTypes = TenantId.HasValue
+                ? await Service.GetActivePaymentProvidersAsync(TenantId.Value)
+                : [];
+        }
+        catch (Exception ex) { await HandleErrorAsync(ex); }
+        finally
+        {
+            Loading = false;
+            StateHasChanged();
+        }
+    }
 
     async Task BackToTenants()
     {
