--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/TenantSelectionStep.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/Steps/TenantSelectionStep.razor
@@ -3,25 +3,54 @@
 
 @inherits PikachuComponentBase
 
-@foreach (var tenant in Tenants.OrEmptyIfNull())
+@if (Loading)
 {
-    <div class="list-card" @onclick="@(() => SelectTenant(tenant))">
-        <div class="list-card-left">
-            <div class="list-card-icon">
-                @TenantPayoutUiHelper.GetInitials(tenant.Name)
+    <p class="mt-3">
+        <span class="spinner">
+            <span class="spinner-border text-primary" style="height: 1.5rem; width: 1.5rem; border-width: 2px;"></span>
+        </span>
+        <span style="font-size: 1rem;">Loading...</span>
+    </p>
+}
+else
+{
+    @foreach (var tenant in Tenants.OrEmptyIfNull())
+    {
+        <div class="list-card" @onclick="@(() => SelectTenant(tenant))">
+            <div class="list-card-left">
+                <div class="list-card-icon">
+                    @TenantPayoutUiHelper.GetInitials(tenant.Name)
+                </div>
+                <div class="list-card-info">
+                    <h3>@tenant.Name</h3>
+                    <div class="list-card-meta">ID: @tenant.TenantId • @L["TenantActiveSince", tenant.CreationTime.Year]</div>
+                </div>
             </div>
-            <div class="list-card-info">
-                <h3>@tenant.Name</h3>
-                <div class="list-card-meta">ID: @tenant.TenantId • @L["TenantActiveSince", tenant.CreationTime.Year]</div>
+            <div class="list-card-stats">
+                <p class="tenant-fee">
+                    @L["TenantPayoutTotalFees", $"${tenant.TotalFees:N2}"]
+                </p>
+                <p class="small">@L["NumberOfTransactionsThisMonth", tenant.TotalTransactions]</p>
             </div>
         </div>
-        <div class="list-card-stats">
-            <p class="tenant-fee">
-                @L["TenantPayoutTotalFees", $"${tenant.TotalFees:N2}"]
-            </p>
-            <p class="small">@L["NumberOfTransactionsThisMonth", tenant.TotalTransactions]</p>
+    }
+
+    @if (Tenants == null || Tenants.Count == 0)
+    {
+        <div class="list-card disabled">
+            <div class="list-card-left">
+                <div class="list-card-icon">
+                    <i class="fas fa-cancel"></i>
+                </div>
+                <div class="list-card-info">
+                    <div class="d-flex align-items-start justify-content-start gap-2">
+                        <h3>@L["NoPayoutData"]</h3>
+                    </div>
+                    <div class="list-card-meta">@L["NoPayoutDataDescription"]</div>
+                </div>
+            </div>
         </div>
-    </div>
+    }
 }
 
 @code {
@@ -29,26 +58,34 @@
     [Parameter] public EventCallback<TenantPayoutSummaryDto?> TenantChanged { get; set; }
 
     private List<TenantPayoutSummaryDto> Tenants { get; set; } = new();
-    private TenantPayoutSummaryDto? SelectedTenant { get; set; }
+    private TenantPayoutSummaryDto? Tenant { get; set; }
+    private bool Loading { get; set; } = true;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+            await GetData();
+    }
+
+    async Task GetData()
     {
         try
         {
             Tenants = await Service.GetTenantSummariesAsync();
-            await base.OnInitializedAsync();
         }
-        catch (Exception ex)
+        catch (Exception ex) { await HandleErrorAsync(ex); }
+        finally
         {
-            await HandleErrorAsync(ex);
+            Loading = false;
+            StateHasChanged();
         }
     }
 
     private async Task SelectTenant(TenantPayoutSummaryDto? value)
     {
-        if (SelectedTenant != value)
+        if (Tenant != value)
         {
-            SelectedTenant = value;
+            Tenant = value;
             await TenantChanged.InvokeAsync(value);
         }
     }
