--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TenantPayout.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TenantPayout.razor
@@ -49,7 +49,7 @@
                 break;
 
             case 4:
-                <PayoutDetails Year="Year" />
+                <PayoutDetails Service="TenantPayoutAppService" TenantId="TenantId" FeeType="FeeType" Year="Year" />
                 break;
         }
     </div>
