Fix for Pk-1902

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -350,6 +350,8 @@
                         if (item == Enum.GetName(DeliveryMethod.BlackCat1) ||
                         item == Enum.GetName(DeliveryMethod.TCatDeliveryNormal) ||
                         item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
+                            item == Enum.GetName(DeliveryMethod.FamilyMart1) ||
+                            item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
                         item == Enum.GetName(DeliveryMethod.SevenToEleven1))
                         {
 
