--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/PayoutDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/PayoutDetails.razor
@@ -1,176 +1,15 @@
-﻿@using Kooco.Pikachu.EnumValues
+﻿@using Kooco.Pikachu.Blazor.Pages.TenantPayouts.Steps.PayoutDetails
+@using Kooco.Pikachu.EnumValues
 @using Kooco.Pikachu.Extensions
 @using Kooco.Pikachu.TenantPayouts
 
 @inherits PikachuComponentBase
 <h5 class="text-dark">@L["PayoutDetails:FeeSummary", Year]</h5>
 
-<div class="stats-container">
-    <div class="stats-card">
-        <div class="stats-icon purple">
-            <i class="fas fa-wallet"></i>
-        </div>
-        <div class="stats-info">
-            <h3>@Summary.NetAmount.ToMoneyString()</h3>
-            <p class="m-0">@(L["NetAmount"])</p>
-        </div>
-    </div>
-    <div class="stats-card">
-        <div class="stats-icon green">
-            <i class="fas fa-file-invoice-dollar"></i>
-        </div>
-        <div class="stats-info">
-            <h3>@Summary.TotalFees.ToMoneyString()</h3>
-            <p class="m-0">@(L["TotalFees"])</p>
-        </div>
-    </div>
-    <div class="stats-card">
-        <div class="stats-icon orange">
-            <i class="fas fa-tools"></i>
-        </div>
-        <div class="stats-info">
-            <h3>@Summary.ProcessingFee.ToMoneyString()</h3>
-            <p class="m-0">@(L["ProcessingFee"])</p>
-        </div>
-    </div>
-    <div class="stats-card">
-        <div class="stats-icon red">
-            <i class="fas fa-arrow-right-arrow-left"></i>
-        </div>
-        <div class="stats-info">
-            <h3>@Summary.Transactions.ToNumberString()</h3>
-            <p class="m-0">@(L["Transactions"])</p>
-        </div>
-    </div>
-</div>
-
-<div class="export-options-container">
-    <h5 class="text-dark">@L["PayoutDetails:ExportOptions"]</h5>
-    <div class="stats-container m-0">
-        <div class="stats-card">
-            <div class="stats-icon purple">
-                <i class="fas fa-funnel-dollar"></i>
-            </div>
-            <div class="stats-info">
-                <p class="mb-1">
-                    @(L["PayoutDetails:SelectedRecords"]) @SelectedCountMarkup
-                </p>
-                <div>
-                    <button class="export-option-button" disabled="@(!IsAnySelected)">
-                        <i class="fas fa-file-csv"></i>
-                        @L["CSV"]
-                    </button>
-                    <button class="export-option-button" disabled="@(!IsAnySelected)">
-                        <i class="fas fa-file-excel"></i>
-                        @L["Excel"]
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="stats-card">
-            <div class="stats-icon green">
-                <i class="fas fa-bullseye"></i>
-            </div>
-            <div class="stats-info">
-                <p class="mb-1">@(L["PayoutDetails:CurrentFilter"])</p>
-                <div>
-                    <button class="export-option-button">
-                        <i class="fas fa-file-csv"></i>
-                        @L["CSV"]
-                    </button>
-                    <button class="export-option-button">
-                        <i class="fas fa-file-excel"></i>
-                        @L["Excel"]
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="stats-card">
-            <div class="stats-icon orange">
-                <i class="fas fa-database"></i>
-            </div>
-            <div class="stats-info">
-                <p class="mb-1">@(L["PayoutDetails:AllData"])</p>
-                <div>
-                    <button class="export-option-button">
-                        <i class="fas fa-file-csv"></i>
-                        @L["CSV"]
-                    </button>
-                    <button class="export-option-button">
-                        <i class="fas fa-file-excel"></i>
-                        @L["Excel"]
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="card">
-    <div class="card-body">
-        <div class="row row-cols-5">
-            <div class="col">
-                <div class="form-group m-0">
-                    <label class="form-label">@L["StartDate"]</label>
-                    <AntDesign.DatePicker TValue="DateTime" @bind-Value="Filters.StartDate" />
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group m-0">
-                    <label class="form-label">@L["EndDate"]</label>
-                    <AntDesign.DatePicker TValue="DateTime" @bind-Value="Filters.EndDate" />
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group m-0">
-                    <label class="form-label">@L["PaymentType"]</label>
-                    <AntDesign.Select @bind-Value="@Filters.PaymentMethod"
-                                      TItemValue="PaymentMethods?"
-                                      TItem="PaymentMethods?"
-                                      DropdownMatchSelectWidth="false"
-                                      AllowClear>
-                        <SelectOptions>
-                            @foreach (PaymentMethods method in Enum.GetValues<PaymentMethods>())
-                            {
-                                <AntDesign.SelectOption TItem="PaymentMethods?" TItemValue="PaymentMethods?" Value="@method" Label="@L[method.ToString()]" />
-                            }
-                        </SelectOptions>
-                    </AntDesign.Select>
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group m-0">
-                    <label class="form-label">@L["OrderNumber"]</label>
-                    <AntDesign.Input @bind-Value="@Filters.Filter" />
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-group m-0 d-flex align-items-end h-100">
-                    <button class="btn btn-sm btn-primary px-3" style="border-radius: 0.3rem;" @onclick="GetPayoutRecordsAsync">
-                        @L["ApplyFilters"]
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="export-options-container">
-    <h5 class="text-dark">@L["PayoutDetails:BatchActions"]</h5>
-    <div>
-        <PikachuButton Class="pk-btn-sm pk-btn-outline-primary" Disabled="!IsAnySelected">
-            @L["PayoutDetails:TransferSelectedToWallet"]
-            @SelectedCountMarkup
-        </PikachuButton>
-        <PikachuButton Class="pk-btn-sm pk-btn-outline-warning" Disabled="!IsAnySelected">
-            @L["PayoutDetails:MarkSelectedAsPaid"]
-            @SelectedCountMarkup
-        </PikachuButton>
-        <p class="text-muted fs-xs m-0 mt-1">
-            @L["PayoutDetails:PaymentActionsOnlyAffectUnpaidRecords"]
-        </p>
-    </div>
-</div>
+<PayoutDetailSummary Summary="Summary" />
+<PayoutExportOptions AnySelected="AnySelected" SelectedCountText="@SelectedCountText" CurrentFilterCount="TotalCount" />
+<PayoutDetailFilters @bind-Filters="Filters" OnFilter="ApplyFiltersAsync" Year="Year" TenantId="TenantId" FeeType="FeeType" />
+<PayoutBatchActions AnySelected="AnySelected" SelectedCountText="@SelectedCountText" />
 
 <DataGrid TItem="TenantPayoutRecordDto"
           Data="PayoutDetailList"
@@ -183,7 +22,7 @@
           Narrow
           Responsive
           SelectionMode="DataGridSelectionMode.Multiple"
-          @bind-SelectedRows="SelectedPayoutDetail"
+          @bind-SelectedRows="SelectedPayoutDetails"
           RowSelectable="RowSelectableHandler">
     <DataGridColumns>
         <DataGridMultiSelectColumn TItem="TenantPayoutRecordDto" Width="30px"></DataGridMultiSelectColumn>
@@ -250,16 +89,6 @@
             </DisplayTemplate>
         </DataGridColumn>
         <DataGridColumn TItem="TenantPayoutRecordDto"
-                        Caption="@L["PlatformFee"]"
-                        TextAlignment="TextAlignment.End">
-            <DisplayTemplate>
-                <Span Class="text-danger">
-                    @* @context.PlatformFee.ToString("N2") *@
-                    -
-                </Span>
-            </DisplayTemplate>
-        </DataGridColumn>
-        <DataGridColumn TItem="TenantPayoutRecordDto"
                         Field="@nameof(TenantPayoutRecordDto.NetAmount)"
                         Caption="@L["NetAmount"]"
                         TextAlignment="TextAlignment.End">
@@ -273,35 +102,41 @@
                         Caption="@L["Status"]"
                         TextAlignment="TextAlignment.Center">
             <DisplayTemplate>
-                @* @{
-                    var statusClass = context.Status == "paid" ? "pk-badge-success" : "pk-badge-warning";
-                    statusClass += " text-uppercase";
+                @if (context.IsPaid)
+                {
+                    <Tooltip Text="@L["PayoutDetails:PaidOn", context.PaymentDate?.ToShortDateString() ?? ""]">
+                        <PikachuBadge Class="pk-badge-success">
+                            @L["Paid"]
+                        </PikachuBadge>
+                    </Tooltip>
                 }
-                <PikachuBadge Class="@statusClass">
-                    @L[context.Status]
-                </PikachuBadge> *@
-                -
+                else
+                {
+                    <PikachuBadge Class="pk-badge-warning">
+                        @L["Unpaid"]
+                    </PikachuBadge>
+                }
             </DisplayTemplate>
         </DataGridColumn>
         <DataGridColumn TItem="TenantPayoutRecordDto"
                         Caption="@L["Actions"]">
             <DisplayTemplate>
                 <Div Class="text-nowrap">
-                    @* @if (context.Status == "Paid")
-                    { *@
+                    @if (context.IsPaid)
+                    {
+                        <PikachuBadge Class="pk-badge-success">
+                            @L["Processed"]
+                        </PikachuBadge>
+                    }
+                    else
+                    {
                         <Tooltip Display="Display.InlineBlock" Text="@L["TransferToWallet"]">
                             <PikachuButton Class="pk-btn-sm pk-btn-icon green" IconClass="fas fa-paper-plane"></PikachuButton>
                         </Tooltip>
                         <Tooltip Display="Display.InlineBlock" Text="@L["MarkAsPaid"]">
                             <PikachuButton Class="pk-btn-sm pk-btn-icon amber" IconClass="fas fa-check-double"></PikachuButton>
                         </Tooltip>
-                    @* }
-                    else
-                    {
-                        <PikachuBadge Class="pk-badge-success">
-                            @L["Processed"]
-                        </PikachuBadge>
-                    } *@
+                    }
                 </Div>
             </DisplayTemplate>
         </DataGridColumn>
