--- a/src/Kooco.Pikachu.Blazor/wwwroot/css/tenant-payout.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/css/tenant-payout.css
@@ -8,6 +8,8 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
     .header h3 {
@@ -147,9 +149,9 @@
     gap: 30px;
 }
 
-.year-list-stats h5 {
-    margin: 0;
-}
+    .year-list-stats h5 {
+        margin: 0;
+    }
 
     .year-list-stats .small {
         font-size: 0.7rem;
@@ -244,14 +246,14 @@
 
 
 /* Payout Details */
-.stats-container {
+/*.payout-=stats-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 25px;
-}
+}*/
 
-.stats-card {
+.payout-stats-card {
     border-radius: var(--radius);
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
@@ -259,16 +261,16 @@
     display: flex;
     align-items: center;
     transition: var(--transition);
-    min-width: 250px;
-    flex: 1 0 calc(25% - 20px);
+    /*min-width: 250px;
+    flex: 1 0 calc(25% - 20px);*/
 }
 
-    .stats-card:hover {
+    .payout-stats-card:hover {
         transform: translateY(-5px);
         box-shadow: var(--shadow-md);
     }
 
-.stats-icon {
+.payout-stats-icon {
     width: 35px;
     height: 35px;
     border-radius: var(--radius);
@@ -281,58 +283,69 @@
     margin-right: 15px;
 }
 
-.stats-info {
+.payout-stats-info {
     flex: 1;
 }
 
-    .stats-info h3 {
+    .payout-stats-info h3 {
         font-size: 18px;
         font-weight: 700;
         margin-bottom: 5px;
         color: #000;
     }
 
-    .stats-info p {
+    .payout-stats-info p {
         color: var(--text-muted);
         font-size: 13px;
     }
 
-.stats-icon.purple {
+.payout-stats-icon.purple {
     background-color: rgba(155, 89, 182, 0.1);
     color: var(--purple-color);
 }
 
-.stats-icon.orange {
+.payout-stats-icon.orange {
     background-color: rgba(230, 126, 34, 0.1);
     color: var(--orange-color);
 }
 
-.stats-icon.green {
+.payout-stats-icon.green {
     background-color: rgba(39, 174, 96, 0.1);
     color: var(--green-color);
 }
 
-.stats-icon.red {
+.payout-stats-icon.red {
     background-color: rgba(230, 34, 34, 0.1);
     color: rgb(230 34 34);
 }
 
-.stats-icon.gold {
+.payout-stats-icon.gold {
     background-color: rgba(241, 196, 15, 0.1);
     color: #f1c40f;
 }
 
-.stats-icon.cyan {
+.payout-stats-icon.cyan {
     background-color: rgba(26, 188, 156, 0.1);
     color: #1abc9c;
 }
 
-.export-options-container {
+.payout-options-container {
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem 1.5rem;
     border-radius: 0.7rem;
     margin-bottom: 20px;
 }
+
+.payout-batch-actions {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+    .payout-batch-actions .pk-btn {
+        flex: 1 1 250px;
+        max-width: min(100%, 250px);
+    }
 
 .export-option-button {
     border: none;
@@ -348,7 +361,7 @@
         box-shadow: var(--shadow-md);
     }
 
-.export-option-button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-}
+    .export-option-button:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+    }
